CMBSandbox4/src/objects/New_Client_Questionaire__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <inlineHelpText>What is your annual revenue?</inlineHelpText>
        <label>Annual Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppExchange_Apps__c</fullName>
        <inlineHelpText>What Apps are you currently using?</inlineHelpText>
        <label>AppExchange Apps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Are_you_using_Salesforce__c</fullName>
        <inlineHelpText>Are you currently using Salesforce?</inlineHelpText>
        <label>Are you using Salesforce?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <inlineHelpText>Who will be making the decision on this?</inlineHelpText>
        <label>Authority</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Avg_Sales_Cycle__c</fullName>
        <inlineHelpText>The time between the initial contact  with a customer and the transaction that completes the sale.</inlineHelpText>
        <label>Avg. Sales Cycle</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <inlineHelpText>What budget do you have for this? Please tell me some more around what you have budgeted for this...</inlineHelpText>
        <label>Budget</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Concerns__c</fullName>
        <inlineHelpText>List of possible concerns: 1) Fit. 2) Need. 3) Budget. 4) Timeline. 5) Expectaitons</inlineHelpText>
        <label>Concerns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_Accounting_System__c</fullName>
        <inlineHelpText>What are you using for accounting?</inlineHelpText>
        <label>Current Accounting System</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_CRM_System__c</fullName>
        <description>What system is Lead currently using?</description>
        <inlineHelpText>Find out what systems Lead is using for CRM, Sales, Marketing etc</inlineHelpText>
        <label>Current CRM System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Pain_Points__c</fullName>
        <inlineHelpText>What about your current systems is not meeting your needs?  (Find out why they are calling you and what happened, and why is that important to them.) Are the users complaining about the current system (pain)?</inlineHelpText>
        <label>Current Pain Points</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Sales_Process__c</fullName>
        <inlineHelpText>Can you please take me through your current sales process?</inlineHelpText>
        <label>Current Sales Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Migration_Requirements__c</fullName>
        <inlineHelpText>What would need to be migrated from legacy systems?</inlineHelpText>
        <label>Data Migration Requirements?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <inlineHelpText>How many employees do you have? What is the size of your team?</inlineHelpText>
        <label>Company Size/Employees #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_Apps_Leads_per_day__c</fullName>
        <label>How many Apps/Leads per day</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ideal_Customer_Profile__c</fullName>
        <inlineHelpText>What is your ideal customer profile? (Demographic, vertical, segment, who are your customers...)</inlineHelpText>
        <label>Ideal Customer Profile</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Requirements__c</fullName>
        <inlineHelpText>Do you have any integration requirements with external systems?</inlineHelpText>
        <label>Integration Requirements?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Marketing_Spend__c</fullName>
        <inlineHelpText>What is your average monthly marketing spend?</inlineHelpText>
        <label>Monthly Marketing Spend</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <inlineHelpText>Can you give me an overview of your requirements?</inlineHelpText>
        <label>Need</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Objectives_Benefits__c</fullName>
        <inlineHelpText>What are you looking to achieve? What benefits are you looking to gain? Are you leaving business on the table? Any goals not attainable as a result of the current system limitations?</inlineHelpText>
        <label>Objectives/Benefits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Client Intakes</relationshipLabel>
        <relationshipName>Client_Intakes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Systems__c</fullName>
        <inlineHelpText>What other systems are being used?</inlineHelpText>
        <label>Other Systems?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Interest__c</fullName>
        <description>What Salesforce.com product are they interested in?</description>
        <inlineHelpText>Find out specific product interested in.</inlineHelpText>
        <label>Primary Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Analytics Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration (Chatter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desk.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation - NGO Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heroku</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jigsaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pardot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Cloud - Pardot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce1 Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Questions_to_Ask__c</fullName>
        <inlineHelpText>New questions that should be asked to client</inlineHelpText>
        <label>Questions to Ask</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Salesforce_License_Editions__c</fullName>
        <inlineHelpText>What Salesforce License Editions do you have or do you plan on getting? (Professional or Enterprise? )</inlineHelpText>
        <label>Salesforce License Editions</label>
        <picklist>
            <controllingField>Are_you_using_Salesforce__c</controllingField>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proffesional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_Users__c</fullName>
        <inlineHelpText>How many salesforce users? (Either what they have today or how many users to they plan to have)</inlineHelpText>
        <label>Salesforce/System Users#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Requirements__c</fullName>
        <label>System Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <inlineHelpText>What if your timeline for this? When are you looking to get this done? Is there any specific event/date that is driving the timeline?</inlineHelpText>
        <label>Timeline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Business__c</fullName>
        <inlineHelpText>What is your business model? Are you a Broker/Lender? What products/services do you sell?</inlineHelpText>
        <label>Type of Business (Broker/Lender)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_communicates_with_Banks__c</fullName>
        <inlineHelpText>Who communicates with Banks?</inlineHelpText>
        <label>Who communicates with Banks?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Years_in_Business__c</fullName>
        <inlineHelpText>How long have you been in business?</inlineHelpText>
        <label>Years in Business</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Client Intake</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Client Intake Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Intakes</pluralLabel>
    <recordTypes>
        <fullName>General_Clients</fullName>
        <active>true</active>
        <description>For non MCA App clients</description>
        <label>General Clients</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCA_App_Clients_Pre_Demo</fullName>
        <active>true</active>
        <description>MCA App Clients - Pre Demo</description>
        <label>MCA App Clients - Pre Demo</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>